welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:2: error: not found: value nbBaggles
	nbBaggles=0
        ^Poucet:4: error: not found: value nbBaggles
  	nbBaggles=nbBaggles+1
        ^Poucet:5: error: not found: value nbBaggles
  if (nbBaggles>2){
      ^